Spacing fixes, more list styling

--- a/pages/App.css
+++ b/pages/App.css
@@ -1304,6 +1304,8 @@ hr {
 }
 
 .step-container {
+  display: flex;
+  align-items: center;
   text-align: left;
 }
 
